# tiny-logger

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
include/: hazardPointerGuard.h  tinyLogger.h
src/: lockFreeQueue.h  main.cpp  tinyLogger.h
src/logger/: harzardPointerGuard.cpp  hazardPointerGuard.h  lockFreeQueue.cpp  lockFreeQueue.h  tinyLogger.cpp  tinyLogger.h
test/: CMakeLists.txt  main.cpp
